# arc-skills-plugins

./: .gitignore  AGENTS.md  AGENTS_ROSTER.md  GEMINI.md  Gemini-CLI.md  Morning_Briefing_Orchestrator.md  README.md  SOUL.md  config-patch.json  deploy_scrubbed.sh  deploy_secrets_wrapper.sh  deploy_skills.py  openclaw.json  patch_config.py  payload.txt  scaffold_google_skills.py  sync_agent_skills.py  sync_skills.sh  system_resources.md  wrapper.sh
Config/: context.md  ollama-maxwell.service
Docs/: AI Assistant Skills & Architecture Analysis.docx  Architecture_Pivot_Strategy.md  OpenClaw_2026_Architectural_Dynamics.md  OpenClaw_2026_Tool_Orchestration.md  OpenClaw_Best_Practices_and_Common_Issues.md  OpenClaw_Core_Files_Significance.md  TODO.md  context.md
Logs/: context.md
Memory/: context.md
Plugins/: context.md
SDLC/: README.md  Transition_Playbook.md
Scripts/: context.md  extract_docx.py  generate_manifest.py  manage_config.py  sync_skills.sh  test_gog_alienware.cjs
Shared/: utils.py
Skills/: MANIFEST.md  context.md  google-calendar-harden.md
Skills/clauditor/crates/alerter/: Cargo.toml
Skills/clauditor/crates/alerter/src/: lib.rs
Skills/clauditor/crates/clauditor-cli/: Cargo.toml
Skills/clauditor/crates/clauditor-cli/src/: main.rs
Skills/clauditor/crates/schema/: Cargo.toml
Skills/clauditor/crates/schema/src/: lib.rs
Tasks/: To_Do_List.md
Tests/: Atomic_Nodes_test.py  Backlog_Grooming_test.py  CRM_Entity_Extraction_test.py  Calendar_Guard_test.py  Capture_Classification_test.py  Flow_State_Monitoring_test.py  Skill_Integrity_test.py  (+9 more)
(+414 files in other folders)
