[package]
name = "alerter"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
detector = { path = "../detector" }
collector = { path = "../collector" }

[dev-dependencies]
tempfile = "3"
schema = { path = "../schema" }
