[package]
name = "clauditor-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "clauditor"
path = "src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schema = { path = "../schema" }
collector = { path = "../collector" }
detector = { path = "../detector" }
writer = { path = "../writer" }
alerter = { path = "../alerter" }
sd-notify = "0.4"
signal-hook = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
