[package]
name = "schema"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde", "clock"] }
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2.5"  # constant-time comparison

[dev-dependencies]
serde_json = "1"

